--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Be yourself and don't go with the flow.
+title: The only way to go fast, is to go well.
 comments: false
 ---
